@@ -3,5 +3,7 @@ cd ../ActionBarSherlock
 git pull
 cd ../android-menudrawer
 git pull
+cd ../ShowcaseView
+git pull
 cd ../StandOut
 git pull
